--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+
   <title>Frontend Mentor | Tip calculator app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-<div class="calculator-body">
-  <div class="bill-input-section">
-     <div class="bill-input-header">Bill</div> 
-     <input type="number" class="bill-input">
-  </div>
-  <div class="tip-selection-section">
-    <div class="tip-selection-section-header">Select Tip %</div>
-    <button class="tip-percentage">5%</button>
-    <button class="tip-percentage">10%</button>
-    <button class="tip-percentage">15%</button>
-    <button class="tip-percentage">25%</button>
-    <button class="tip-percentage">50%</button>
-    <button class="tip-percentage">Custom</button>
-  </div>
-  <div class="people-count-section">
-    <div class="people-count-section-header">Number of People</div>
-    <input type="number" class="people-count-input">
-  </div>
-  <div class="tip-calculations-section">
-    <div class="tip-per-person">
-      <div class="tip-per-person-header">Tip Amount / person</div>
-      <div id="tip-per-person-result"></div>
+  <div class="calculator-body">
+    <div class="bill-input-section">
+      <div class="bill-input-header">Bill</div>
+      <input type="number" class="bill-input">
     </div>
-    <div class="total-tip">
-      <div class="total-tip-header">Total / person</div>
-      <div id="total-tip-result"></div>
+    <div class="tip-selection-section">
+      <div class="tip-selection-section-header">Select Tip %</div>
+      <button class="tip-percentage">5%</button>
+      <button class="tip-percentage">10%</button>
+      <button class="tip-percentage">15%</button>
+      <button class="tip-percentage">25%</button>
+      <button class="tip-percentage">50%</button>
+      <button class="tip-percentage">Custom</button>
     </div>
-    <button class="reset">Reset</button>
+    <div class="people-count-section">
+      <div class="people-count-section-header">Number of People</div>
+      <input type="number" class="people-count-input">
+    </div>
+    <div class="tip-calculations-section">
+      <div class="tip-per-person">
+        <div class="tip-per-person-header">Tip Amount / person</div>
+        <div id="tip-per-person-result"></div>
+      </div>
+      <div class="total-tip">
+        <div class="total-tip-header">Total / person</div>
+        <div id="total-tip-result"></div>
+      </div>
+      <button class="reset">Reset</button>
+    </div>
   </div>
-</div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
