tip buttons flex and total calculations box styled

--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
 
 <body>
   <div class="calculator-body">
-    <div class="bill-input-section">
-      <div class="bill-input-header">Bill</div>
+    <div class="bill-input-section section">
+      <div class="bill-input-header section-header">Bill</div>
       <input type="number" class="bill-input">
     </div>
-    <div class="tip-selection-section">
-      <div class="tip-selection-section-header">Select Tip %</div>
-      <button class="tip-percentage">5%</button>
-      <button class="tip-percentage">10%</button>
-      <button class="tip-percentage">15%</button>
-      <button class="tip-percentage">25%</button>
-      <button class="tip-percentage">50%</button>
-      <button class="tip-percentage">Custom</button>
+    <div class="tip-selection-section section">
+      <div class="tip-selection-section-header section-header">Select Tip %</div>
+      <div class="tip-selection-buttons">
+        <button class="tip-percentage">5%</button>
+        <button class="tip-percentage">10%</button>
+        <button class="tip-percentage">15%</button>
+        <button class="tip-percentage">25%</button>
+        <button class="tip-percentage">50%</button>
+        <button class="tip-percentage">Custom</button>
+      </div>
     </div>
-    <div class="people-count-section">
-      <div class="people-count-section-header">Number of People</div>
+    <div class="people-count-section section">
+      <div class="people-count-section-header section-header">Number of People</div>
       <input type="number" class="people-count-input">
     </div>
-    <div class="tip-calculations-section">
+    <div class="tip-calculations-section section">
       <div class="tip-per-person">
         <div class="tip-per-person-header">Tip Amount / person</div>
         <div id="tip-per-person-result"></div>
